--- a/a1.html
+++ b/a1.html
@@ -5,6 +5,7 @@
     <!-- ↓これがスマホ表示で最も重要なタグです -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>マンガ1コマ目</title>
+<link rel="stylesheet" href="manga_style.css">
     <style>
         .manga-panel {
             max-width: 600px; /* PCで見ても大きすぎないように */
