--- a/a2.html
+++ b/a2.html
@@ -2,10 +2,13 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <!-- ↓これがスマホ表示で最も重要なタグです -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>マンガ1コマ目</title>
+    <title>マンガのページ</title>
+    
+    <!-- これで style.css を読み込みます -->
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="manga-panel">
         <img src="a.png" alt="1コマ目">
