--- a/a2.html
+++ b/a2.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>マンガのページ</title>
+    <title>マンガのページ2</title>
     
     <!-- これで style.css を読み込みます -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1">
 </head>
 
 <body>
