--- a/testing2/2komame.html
+++ b/testing2/2komame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>マンガのページ2</title>
+    <title>マンガのページ3</title>
     
     <!-- これで style.css を読み込みます -->
     <link rel="stylesheet" href="manga_style.css?v=2">
@@ -11,9 +11,12 @@
 
 <body>
     <div class="manga-panel">
-        <img src="a.png" alt="1コマ目">
-        <p>「お魚くわえたさ◯えさん」</p>
+        <img src="a2.webp" alt="2コマ目">
+        <p>2こまめのセリフ</p>
     </div>
 </body>
+<div class="nav-links">
+    <a href="3komame.html" class="next-btn">次のコマへ ➔</a>
+</div>
 </html>
 
