--- a/testing2/4komame.html
+++ b/testing2/4komame.html
@@ -11,9 +11,12 @@
 
 <body>
     <div class="manga-panel">
-        <img src="a.webp" alt="1コマ目">
-        <p>「お魚くわえたさ◯えさん」</p>
+        <img src="a4.webp" alt="4コマ目">
+        <p>4こまめのセリフ</p>
     </div>
 </body>
+<div class="nav-links">
+    <a href="index.html" class="next-btn">おしまい ➔</a>
+</div>
 </html>
 
