--- a/test1/2komame.html
+++ b/test1/2komame.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
- 
+    <div class="manga-panel">
+        <img src="a2.webp" alt="2コマ目">
+        <p>2こまめのセリフ</p>
+    </div>
 </body>
 <div class="nav-links">
-    <a href="1komame.html" class="next-btn">一コマへ ➔</a>
+    <a href="3komame.html" class="next-btn">次のコマへ ➔</a>
 </div>
 </html>
 
