--- a/test1/3komame.html
+++ b/test1/3komame.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
- 
+    <div class="manga-panel">
+        <img src="a3.webp" alt="3コマ目">
+        <p>3こまめのセリフ</p>
+    </div>
 </body>
 <div class="nav-links">
-    <a href="1komame.html" class="next-btn">一コマへ ➔</a>
+    <a href="4komame.html" class="next-btn">次のコマへ ➔</a>
 </div>
 </html>
 
