--- a/test1/4komame.html
+++ b/test1/4komame.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
- 
+    <div class="manga-panel">
+        <img src="a4.webp" alt="4コマ目">
+        <p>4こまめのセリフ</p>
+    </div>
 </body>
 <div class="nav-links">
-    <a href="1komame.html" class="next-btn">一コマへ ➔</a>
+    <a href="index.html" class="next-btn">おしまい ➔</a>
 </div>
 </html>
 
