--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 <div class="nav-links">
     <a href="test1/index.html" class="next-btn">test1</a>
 </div>
+<div class="nav-links">
+    <a href="0001/index.html" class="next-btn">0001</a>
+</div>
 </html>
 
