--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>マンガのページ3</title>
+    <title>マンガのページ</title>
     
     <!-- これで style.css を読み込みます -->
     <link rel="stylesheet" href="manga_style.css?v=2">
