--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </div>
 <div class="nav-links">
     <a href="0001/index.html" class="next-btn">0001</a>
+    <a href="0002/index.html" class="next-btn">0002</a>
 </div>
 </html>
 
