--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <div class="nav-links">
 </div>
 <div class="nav-links">
-    <a href="0001/index.html" class="next-btn">0001</a>
-    <a href="0002/index.html" class="next-btn">0002</a>
+    <a href="0001/zenbu.html" class="next-btn">0001</a>
+    <a href="0002/zenbu.html" class="next-btn">0002</a>
 </div>
 </html>
 
