--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <div class="nav-links">
     <a href="0001/zenbu.html" class="next-btn">0001</a>
     <a href="0002/zenbu.html" class="next-btn">0002</a>
+    <a href="0003/zenbu.html" class="next-btn">0003</a>
 </div>
 </html>
 
